--- a/Notebook.Web/Views/Shared/Components/Header/Default.cshtml
+++ b/Notebook.Web/Views/Shared/Components/Header/Default.cshtml
@@ -19,7 +19,7 @@
 
                 <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="/profile"><i class="fa fa-user"></i>&nbsp;&nbsp;@Localizer["Profile"]</a></li>
+                        <li><a href="/profile/@Model.ID/@Model.Name.ClearHtmlTagAndCharacter()"><i class="fa fa-user"></i>&nbsp;&nbsp;@Localizer["Profile"]</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-cubes"></i>&nbsp;&nbsp;@Localizer["Applications"] <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
