--- a/Notebook.Web/Views/Folder/Form.cshtml
+++ b/Notebook.Web/Views/Folder/Form.cshtml
@@ -40,7 +40,7 @@
                     else
                     {
                         <div class="alert alert-warning alert-small">
-                            @Localizer["Group is private"]
+                            @Localizer["This folder will also be private because the group is private"]
                         </div>
                     }
                 </div>
