--- a/Notebook.Web/Views/Folder/Detail.cshtml
+++ b/Notebook.Web/Views/Folder/Detail.cshtml
@@ -18,8 +18,6 @@
 
     <div class="row">
         <div class="col-md-3">
-
-            <!-- Profile Image -->
             <div class="box box-primary">
                 <div class="box-body box-profile" style="padding:10px 15px;">
                     <p class="text-center media-icon">F</p>
@@ -57,22 +55,19 @@
                         </div>
                     }
                 </div>
-                <!-- /.box-body -->
             </div>
         </div>
-        <!-- /.col -->
         <div class="col-md-9">
-            <div class="nav-tabs-custom">
-                @*<ul class="nav nav-tabs">
-                    <li @((Model.List == "" || Model.List == "notes") ? "class=active" : "")><a href="/folder/@Model.ID/notes"><i class="fa fa-file-text-o"></i>&nbsp;@Localizer["Notes"]</a></li>
-                    <li @((Model.List == "users") ? "class=active" : "")><a href="/folder/@Model.ID/users"><i class="fa fa-users"></i>&nbsp;@Localizer["Users"]</a></li>
-                </ul>*@
-                <div class="tab-content">
-                    @{ 
-                        await Html.RenderPartialAsync("Notes", new DataListPartialModel { ID = Model.ID, Member = Model.MemberType });
-                    }
+            @if (Model.Visible == Visible.Public || ())
+            {
+                <div class="nav-tabs-custom">
+                    <div class="tab-content">
+                        @{
+                            await Html.RenderPartialAsync("Notes", new DataListPartialModel { ID = Model.ID, Member = Model.MemberType });
+                        }
+                    </div>
                 </div>
-            </div>
+             }
         </div>
     </div>
 }
