--- a/Notebook.Web/Views/Note/Detail.cshtml
+++ b/Notebook.Web/Views/Note/Detail.cshtml
@@ -46,8 +46,7 @@
                         }
                         else
                         {
-                            <a href="#" class="btn btn-primary"><b>Follow</b></a>
-                            <a href="#" class="btn btn-success"><b>Message</b></a>
+                            <a href="#" class="btn btn-primary"><b>Add to favorites</b></a>
                         }
                     </div>
                 </div>
