--- a/Notebook.Web/Views/Shared/_Layout.cshtml
+++ b/Notebook.Web/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
     <div class="wrapper">
         @await Component.InvokeAsync("Header")
 
+        
         <!-- Full Width Column -->
         <div class="content-wrapper">
             <div class="container" style="padding:15px">
@@ -85,7 +86,7 @@
 
     <!-- Notebook Js -->
     <script src="/notebook/cssJs/js/notebook.js"></script>
-    <script src="/notebook/cssJs/js/ajax.js"></script>
+    <script src="/notebook/cssJs/js/ajaxFunctions.js"></script>
 
     <script>
         $.extend(true, $.fn.dataTable.defaults, {
