--- a/Notebook.Web/Views/Admin/EditUserPartial.cshtml
+++ b/Notebook.Web/Views/Admin/EditUserPartial.cshtml
@@ -23,7 +23,7 @@
                         </div>
                         <div class="form-group">
                             <label>Kullanıcı Adı</label>
-                            <input type="text" class="form-control" placeholder="En az 5 karakter olmalı" value="@Model.Username" name="Username" required />
+                            <input type="text" class="form-control" placeholder="En az 5 karakter olmalı" value="@Model.Username?" name="Username" required />
                         </div>
                         <div class="form-group">
                             <label>Yeni Şifre Belirle</label>
