--- a/Notebook.Web/Views/Admin/Users.cshtml
+++ b/Notebook.Web/Views/Admin/Users.cshtml
@@ -8,18 +8,45 @@
             <div class="box-header with-border">
                 <h3 class="box-title">@Localizer["Users List"]</h3>
             </div>
-            <div class="box-body table-responsive">
-                <table class="table table-striped dataTable ">
-                    <thead  class="table-header">
-                        <tr>
-                            <th sr="true">@Localizer["Name"]</th>
-                            <th sr="true">@Localizer["Username"]</th>
-                            <th sr="true" class="not-mobile">@Localizer["Email"]</th>
-                            <th sr="true">@Localizer["State"]</th>
-                            <th sr="false"></th>
-                        </tr>
-                    </thead>
-                </table>
+            <div class="box-body" id="datalist">
+                <div class="row">
+                    @if (Model.Datalist != null)
+                    {
+                        foreach (var item in Model.Datalist as List<User>)
+                        {
+                            <div class="col-md-3" style="margin-bottom:15px">
+                                <div class="row">
+                                    <div class="col-xs-4 text-center">
+                                        <a href="/profile/@item.ID/@item.Name.ClearHtmlTagAndCharacter()" class="thumb m-r">
+                                            <img src="@(item.Avatar ?? "/notebook/images/avatar.png")" class="img-circle" height="50">
+                                        </a>
+                                        <small class="block text-muted" style="font-size:80%">@item.CreateDate.ToShortDateString()</small><br />
+                                        <small class="block text-muted label label-@(item.Approve ? "success" : "warning")">@(item.Approve ? "Active" : "Passive")</small><br />
+                                        <a class="btn btn-xx btn-primary m-t-xs" style="margin-top:5px" data-type="modal" data-action="/@item.ID/edit-user">
+                                            <i class="fa fa-edit"></i> Edit
+                                        </a>
+                                        <a class="btn btn-xx btn-danger m-t-xs" style="margin-top:5px" data-type="modal" data-action="/@item.ID/delete-user">
+                                            <i class="fa fa-trash"></i> Delete
+                                        </a>
+                                    </div>
+                                    <div class="col-xs-8" style="padding:0">
+                                        <small class="block text-muted">ID: @item.ID</small><br />
+                                        <small class="block text-muted">Name: @item.Name</small><br />
+                                        <small class="block text-muted">Username: @item.Username</small><br />
+                                        <small class="block text-muted">Email: @item.Email</small><br />
+                                        <small class="block text-muted">Groups: @item.Groups?.Count & Notes: @item.Notes?.Count</small><br />
+                                        <small class="block text-muted">Role: @item.Role?.Name</small><br />
+                                        <small class="block text-muted">Last Active: @item.LastActiveDate.ToShortDateString()</small><br />
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    }
+                </div>
+                
+            </div>
+            <div class="box-footer">
+                @Html.Raw(Model.Pagination)
             </div>
         </div>
     </div>
@@ -27,24 +54,12 @@
 
 @section scripts{ 
 
-    <script>
-        var table = $(".dataTable").DataTable({
-            "processing": true,
-            "serverSide": true,
-            "ajax": {
-                "url": "/Admin/UserList",
-                "type": "POST"
-            },
-            "columns": [
-                { "data": "name", },
-                { "data": "username" },
-                { "data": "email", "orderable": false, "className":"not-mobile" },
-                { "data": "state" },
-                { "data": "operations", "orderable": false }
-            ],
-            "language": {
-                "searchPlaceholder":"@Localizer["Search name or username"]"
-            }
-        });
-    </script>
+@*<script>
+    var total = 50;
+    var single = 20;
+    var take = 0;
+
+    loadData("/notebook-userlist");
+</script>*@
+
 }
